--- a/Tarea01.html
+++ b/Tarea01.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ejercicio de Introducción a HTML en OpenBootcamp</title>
+    <title>Ejercicio de Introducción a HTML en OpenBootcamp.</title>
 </head>
 <body>
     <p>Este es mi primer comentario de dos líneas</p>
