--- a/Tarea01.html
+++ b/Tarea01.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ejercicio de Introducción a HTML en OpenBootcamp.</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
 <body>
-    <p>Este es mi primer comentario de dos líneas</p>
-    <p>Aprendiendo a documentar mi código con OpenBootcamp</p>
-    <div>
-      <ul>
-        <a href="https://www.youtube.com/watch?v=YykjpeuMNEk&ab_channel=Coldplay"><li>Coldplay - Hymn For The Weekend (Official Video)</li></a>
-        <a href="https://www.youtube.com/watch?v=1PvBc2TOpE4&ab_channel=Coldplay"><li>Coldplay - Magic (Official Audio)</li></a>
-        <a href="https://www.youtube.com/watch?v=BXvztVMnLVo&ab_channel=PaolaRivera"><li>Coldplay - Trouble Lyrics</li></a>
-      </ul>
-    </div>
+
 </body>
 </html>
